Correct many sonar errors